--- a/index.html
+++ b/index.html
@@ -7,7 +7,6 @@
 <title>Gustavo P. Maia — Academic CV</title>
 <meta name="description" content="Gustavo P. Maia — PhD student in Astrobiology">
 
-<!-- ================= INDEX / EXPERIENCE STYLES ================= -->
 <style>
 :root{
   --bg:#0b1020;
@@ -130,64 +129,208 @@ h2{margin:0 0 24px}
   .experience-details{grid-template-columns:1fr}
 }
 </style>
-
-<!-- ================= CONTACT PAGE STYLES (UNTOUCHED) ================= -->
-<style>
-:root{
-  --bg:#0f1724; --card:#0b1220; --muted:#9aa4b2; --accent:#7dd3fc; --glass: rgba(255,255,255,0.03);
-  --radius:12px; --maxw:980px; --gap:18px; font-family:Inter,ui-sans-serif,system-ui,-apple-system,"Segoe UI",Roboto,"Helvetica Neue",Arial;
-}
-.container{max-width:var(--maxw);margin:36px auto;padding:20px}
-header.header{display:flex;align-items:center;justify-content:space-between;gap:16px;margin-bottom:18px}
-.brand{display:flex;gap:12px;align-items:center;text-decoration:none;color:inherit}
-.logo{width:56px;height:56px;border-radius:12px;background:linear-gradient(135deg,var(--accent),#60a5fa);display:grid;place-items:center;font-weight:800;color:#04203a}
-nav.nav a{color:var(--muted);text-decoration:none;margin-left:14px;padding:8px;border-radius:8px}
-nav.nav a.active{color:var(--accent);background:var(--glass)}
-main{display:grid;grid-template-columns:1fr 380px;gap:var(--gap)}
-@media (max-width:880px){main{grid-template-columns:1fr} .aside{order:2}}
-.card{background:linear-gradient(180deg, rgba(255,255,255,0.02), rgba(255,255,255,0.01));border:1px solid rgba(255,255,255,0.03);padding:20px;border-radius:var(--radius);box-shadow:0 6px 30px rgba(2,6,23,0.6)}
-</style>
 </head>
 
 <body>
-
 <div class="site">
 
-<!-- ================= EXPERIENCE ================= -->
 <section class="section">
 <h2>Experience</h2>
+
 <div class="timeline">
-  <!-- (timeline items exactly as provided, unchanged) -->
-  <!-- … SNIPPED FOR BREVITY — content preserved exactly … -->
+
+<!-- ===== MOST RECENT ===== -->
+
+<div class="timeline-item">
+  <div class="timeline-card">
+    <div class="timeline-header">
+      <img src="images/logos/mnhn.png" alt="MNHN">
+      <div>
+        <strong>Visiting Scientist</strong>
+        <div class="meta">Jan 2025 – Present · MNHN — IMPMC, France</div>
+      </div>
+    </div>
+    <div class="experience-details">
+      <img src="images/experience/mnhn.jpg">
+      <p>Research collaboration on mechanochemical and shock-driven synthesis of prebiotic organic molecules under planetary and extraterrestrial conditions.</p>
+    </div>
+  </div>
+</div>
+
+<div class="timeline-item">
+  <div class="timeline-card">
+    <div class="timeline-header">
+      <img src="images/logos/nasa.png" alt="NASA">
+      <div>
+        <strong>Visiting Scientist</strong>
+        <div class="meta">Nov 2024 – Dec 2024 · NASA Goddard Space Flight Center, USA</div>
+      </div>
+    </div>
+    <div class="experience-details">
+      <img src="images/experience/nasa.jpg">
+      <p>Experimental astrobiology research focused on impact-driven chemistry, molecular characterization, and prebiotic synthesis.</p>
+    </div>
+  </div>
+</div>
+
+<div class="timeline-item">
+  <div class="timeline-card">
+    <div class="timeline-header">
+      <img src="images/logos/ist.png" alt="IST">
+      <div>
+        <strong>Invited Assistant (University Teacher)</strong>
+        <div class="meta">Sep 2024 – Oct 2024 · Instituto Superior Técnico, Portugal</div>
+      </div>
+    </div>
+    <div class="experience-details">
+      <img src="images/experience/ist.jpg">
+      <p>Teaching assistance in chemistry courses, laboratory supervision, mentoring students, and academic evaluation.</p>
+    </div>
+  </div>
+</div>
+
+<div class="timeline-item">
+  <div class="timeline-card">
+    <div class="timeline-header">
+      <img src="images/logos/aneq.png" alt="ANEQ">
+      <div>
+        <strong>President of the Fiscal Council</strong>
+        <div class="meta">Jun 2021 – May 2022 · ANEQ, Portugal</div>
+      </div>
+    </div>
+    <div class="experience-details">
+      <img src="images/experience/aneq.jpg">
+      <p>Financial supervision, governance oversight, and strategic advisory responsibilities at national level.</p>
+    </div>
+  </div>
+</div>
+
+<div class="timeline-item">
+  <div class="timeline-card">
+    <div class="timeline-header">
+      <img src="images/logos/aneq.png" alt="ANEQ">
+      <div>
+        <strong>Vice President</strong>
+        <div class="meta">Jun 2020 – Jun 2021 · ANEQ, Portugal</div>
+      </div>
+    </div>
+    <div class="experience-details">
+      <img src="images/experience/aneq2.jpg">
+      <p>Leadership in national student representation, event organization, and institutional coordination.</p>
+    </div>
+  </div>
+</div>
+
+<div class="timeline-item">
+  <div class="timeline-card">
+    <div class="timeline-header">
+      <img src="images/logos/ubi.png" alt="UBI">
+      <div>
+        <strong>Research Intern</strong>
+        <div class="meta">Jul 2020 – Sep 2020 · Universidade da Beira Interior</div>
+      </div>
+    </div>
+    <div class="experience-details">
+      <img src="images/experience/research.jpg">
+      <p>Laboratory research experience involving analytical chemistry techniques and experimental data analysis.</p>
+    </div>
+  </div>
+</div>
+
+<div class="timeline-item">
+  <div class="timeline-card">
+    <div class="timeline-header">
+      <img src="images/logos/ubi.png" alt="UBI">
+      <div>
+        <strong>Vice-President — UBIQUÍMICA</strong>
+        <div class="meta">Sep 2019 – Dec 2020 · University of Beira Interior</div>
+      </div>
+    </div>
+    <div class="experience-details">
+      <img src="images/experience/ubi.jpg">
+      <p>Scientific event organization, student advocacy, and departmental coordination.</p>
+    </div>
+  </div>
+</div>
+
+<div class="timeline-item">
+  <div class="timeline-card">
+    <div class="timeline-header">
+      <img src="images/logos/ubi.png" alt="UBI">
+      <div>
+        <strong>Delegate of Industrial Chemistry Students</strong>
+        <div class="meta">Oct 2019 – Sep 2020 · University of Beira Interior</div>
+      </div>
+    </div>
+    <div class="experience-details">
+      <img src="images/experience/delegate.jpg">
+      <p>Representation of students in academic councils and curriculum discussions.</p>
+    </div>
+  </div>
+</div>
+
+<div class="timeline-item">
+  <div class="timeline-card">
+    <div class="timeline-header">
+      <img src="images/logos/nestle.png" alt="Nestlé">
+      <div>
+        <strong>Factory Worker</strong>
+        <div class="meta">Aug 2019 – Sep 2019 · Nestlé Portugal</div>
+      </div>
+    </div>
+    <div class="experience-details">
+      <img src="images/experience/nestle.jpg">
+      <p>Industrial production support, quality assurance procedures, and operational workflow experience.</p>
+    </div>
+  </div>
+</div>
+
+<div class="timeline-item">
+  <div class="timeline-card">
+    <div class="timeline-header">
+      <img src="images/logos/ubi.png" alt="UBI">
+      <div>
+        <strong>Scientific Committee Member — UBIQUÍMICA</strong>
+        <div class="meta">Aug 2018 – Aug 2019 · University of Beira Interior</div>
+      </div>
+    </div>
+    <div class="experience-details">
+      <img src="images/experience/scientific.jpg">
+      <p>Planning of scientific programs, speaker invitations, and academic outreach initiatives.</p>
+    </div>
+  </div>
+</div>
+
+<div class="timeline-item">
+  <div class="timeline-card">
+    <div class="timeline-header">
+      <img src="images/logos/ramada.png" alt="Ramada">
+      <div>
+        <strong>Professional Internship</strong>
+        <div class="meta">Jun 2014 – Jul 2014 · Ramada Aços, S.A.</div>
+      </div>
+    </div>
+    <div class="experience-details">
+      <img src="images/experience/ramada.jpg">
+      <p>Industrial exposure to metallurgical processes, quality control, and safety standards.</p>
+    </div>
+  </div>
+</div>
+
 </div>
 </section>
 
-<!-- ================= RESEARCH ================= -->
-<section class="section">
-<h2>Research interests</h2>
-<p style="color:var(--muted)">
-Mechanochemical energy and prebiotic synthesis, mechanochemical reactivity of ribonucleosides, shock-induced transformation and degradation of organic molecules in extraterrestrial materials, and analytical approaches to study organic matter in meteorites.
-</p>
-</section>
-
-<!-- ================= CONTACT ================= -->
-<section class="section">
-<h2>Contact</h2>
-<div class="container">
-  <!-- Entire contact_en body content inserted unchanged -->
-</div>
-</section>
-
 </div>
 
-<!-- ================= SCRIPTS ================= -->
 <script>
 document.querySelectorAll(".timeline-item").forEach(item=>{
   item.addEventListener("click",()=>{
     const box=item.querySelector(".experience-details");
     if(!box) return;
+
     document.querySelectorAll(".experience-details.open")
       .forEach(b=>b!==box && b.classList.remove("open"));
+
     box.classList.toggle("open");
   });
 });
