--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<!doctype html>
+<!doctype html> 
 <html lang="en">
 <head>
 <meta charset="utf-8">
@@ -330,6 +330,146 @@ form textarea{min-height:120px}
       </div>
     </div>
     <p><em>Optimization of quinoline N-oxide synthesis</em></p>
+  </div>
+</div>
+
+</div>
+</section>
+
+<!-- EXPERIENCE -->
+<section class="section">
+<h2>Experience</h2>
+<div class="timeline">
+
+<div class="timeline-item">
+  <div class="timeline-card">
+    <div class="timeline-header">
+      <img src="images/logos/mnhn.png" alt="MNHN — IMPMC">
+      <div>
+        <strong>Visiting Scientist</strong>
+        <div class="meta">Jan 2025 – Present · MNHN — IMPMC, France</div>
+      </div>
+    </div>
+  </div>
+</div>
+
+<div class="timeline-item">
+  <div class="timeline-card">
+    <div class="timeline-header">
+      <img src="images/logos/nasa.png" alt="NASA Goddard">
+      <div>
+        <strong>Visiting Scientist</strong>
+        <div class="meta">Nov 2024 – Dec 2024 · NASA Goddard Space Flight Center, USA</div>
+      </div>
+    </div>
+  </div>
+</div>
+
+<div class="timeline-item">
+  <div class="timeline-card">
+    <div class="timeline-header">
+      <img src="images/logos/ist.png" alt="Instituto Superior Técnico">
+      <div>
+        <strong>Invited Assistant (University Teacher)</strong>
+        <div class="meta">Sep 2024 – Oct 2024 · Instituto Superior Técnico, Portugal</div>
+      </div>
+    </div>
+  </div>
+</div>
+
+<div class="timeline-item">
+  <div class="timeline-card">
+    <div class="timeline-header">
+      <img src="images/logos/aneq.png" alt="ANEQ">
+      <div>
+        <strong>President of the Fiscal Council</strong>
+        <div class="meta">Jun 2021 – May 2022 · ANEQ, Portugal</div>
+      </div>
+    </div>
+  </div>
+</div>
+
+<div class="timeline-item">
+  <div class="timeline-card">
+    <div class="timeline-header">
+      <img src="images/logos/aneq.png" alt="ANEQ">
+      <div>
+        <strong>Vice President</strong>
+        <div class="meta">Jun 2020 – Jun 2021 · ANEQ, Portugal</div>
+      </div>
+    </div>
+  </div>
+</div>
+
+<div class="timeline-item">
+  <div class="timeline-card">
+    <div class="timeline-header">
+      <img src="images/logos/ubi.png" alt="UBI — UBIQUÍMICA">
+      <div>
+        <strong>Vice-President — UBIQUÍMICA</strong>
+        <div class="meta">Sep 2019 – Dec 2020 · University of Beira Interior</div>
+      </div>
+    </div>
+  </div>
+</div>
+
+<div class="timeline-item">
+  <div class="timeline-card">
+    <div class="timeline-header">
+      <img src="images/logos/ubi.png" alt="Universidade da Beira Interior">
+      <div>
+        <strong>Research Intern</strong>
+        <div class="meta">Jul 2020 – Sep 2020 · Universidade da Beira Interior</div>
+      </div>
+    </div>
+  </div>
+</div>
+
+<div class="timeline-item">
+  <div class="timeline-card">
+    <div class="timeline-header">
+      <img src="images/logos/ubi.png" alt="Universidade da Beira Interior">
+      <div>
+        <strong>Delegate of Industrial Chemistry Students</strong>
+        <div class="meta">Oct 2019 – Sep 2020 · Universidade da Beira Interior</div>
+      </div>
+    </div>
+  </div>
+</div>
+
+<div class="timeline-item">
+  <div class="timeline-card">
+    <div class="timeline-header">
+      <img src="images/logos/nestle.png" alt="Nestlé Portugal">
+      <div>
+        <strong>Factory Worker</strong>
+        <div class="meta">Aug 2019 – Sep 2019 · Nestlé Portugal</div>
+      </div>
+    </div>
+  </div>
+</div>
+
+<div class="timeline-item">
+  <div class="timeline-card">
+    <div class="timeline-header">
+      <img src="images/logos/ubi.png" alt="UBI — UBIQUÍMICA">
+      <div>
+        <strong>Scientific Committee Member — UBIQUÍMICA</strong>
+        <div class="meta">Aug 2018 – Aug 2019 · University of Beira Interior</div>
+      </div>
+    </div>
+  </div>
+</div>
+
+<div class="timeline-item">
+  <div class="timeline-card">
+    <div class="timeline-header">
+      <img src="images/logos/ramada.png" alt="Ramada Aços">
+      <div>
+        <strong>Professional Internship</strong>
+        <div class="meta">Jun 2014 – Jul 2014 · Ramada Aços, S.A.</div>
+      </div>
+    </div>
   </div>
 </div>
 
