--- a/index.html
+++ b/index.html
@@ -213,6 +213,90 @@ form textarea{min-height:120px}
 @media(max-width:700px){
   .hero-card{flex-direction:column;align-items:center;text-align:center}
 }
+
+/* ================= EXPERIENCE MODAL ================= */
+.modal {
+  position: fixed;
+  inset: 0;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  z-index: 1200;
+  opacity: 0;
+  pointer-events: none;
+  transition: opacity .25s ease;
+}
+.modal.open {
+  opacity: 1;
+  pointer-events: auto;
+}
+.modal-backdrop {
+  position: absolute;
+  inset: 0;
+  background: rgba(2,6,12,0.6);
+  backdrop-filter: blur(4px);
+  transition: opacity .25s ease;
+}
+.modal-content {
+  position: relative;
+  z-index: 2;
+  width: min(920px, calc(100% - 48px));
+  max-height: calc(100vh - 80px);
+  overflow: auto;
+  padding: 20px;
+  border-radius: var(--radius-lg);
+  background: linear-gradient(180deg, rgba(255,255,255,.02), rgba(255,255,255,.01));
+  border: 1px solid var(--border);
+  box-shadow: 0 20px 60px rgba(0,0,0,.6);
+  transform: translateY(18px) scale(.995);
+  transition: transform .28s cubic-bezier(.2,.9,.2,1), opacity .2s ease;
+  color: var(--text);
+}
+.modal.open .modal-content {
+  transform: translateY(0) scale(1);
+}
+.modal-header {
+  display:flex;
+  gap:12px;
+  align-items:flex-start;
+  margin-bottom:8px;
+}
+.modal-header h3{margin:0;font-size:18px}
+.modal-meta{font-size:13px;color:var(--muted);margin-top:4px}
+.modal-body{margin-top:12px;font-size:15px;line-height:1.45;color:var(--text)}
+.modal-gallery{
+  display:grid;
+  grid-template-columns:repeat(auto-fill,minmax(140px,1fr));
+  gap:10px;
+  margin-top:12px;
+}
+.modal-gallery img{
+  width:100%;
+  height:100px;
+  object-fit:cover;
+  border-radius:10px;
+  border:1px solid var(--border);
+  box-shadow:var(--shadow);
+}
+.close-btn{
+  position:absolute;
+  top:12px;
+  right:12px;
+  background:transparent;
+  border:none;
+  color:var(--muted);
+  font-size:20px;
+  cursor:pointer;
+  padding:6px;
+  border-radius:8px;
+}
+.close-btn:hover{color:var(--accent)}
+@media(max-width:700px){
+  .modal-content{padding:16px;border-radius:12px}
+  .modal-gallery img{height:90px}
+}
+
+
 </style>
 </head>
 
